# bin2hex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
bin2hex/: __init__.py  __main__.py  bin2c.py  bin2model.py  bin2verilog.py  ecc.py  error.py  main.py
example/: ecc_example.py  example.c  example.sh
tests/: test_bin2c.py  test_bin2model.py  test_bin2verilog.py
